--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 ### Имя контейнера (Основное имя хоста) например chulakov.local
 
-VIRTUAL_HOST_CONTAINER_NAME=demoshop.local
+VIRTUAL_HOST_CONTAINER_NAME=
 
 ### Название виртуальных хостов, например design.chulakov.local (Необходимо заменть и при необходимости дополннть
 ### указав дполнительные имена виртуальных хостов через запятую)
