настройка иластик серч

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ VIRTUAL_HOST=demoshop.local:frontend/web,admin.demoshop.local:backend/web,api.de
 
 VIRTUAL_PORT=7050
 #
-XDEBUG_CONFIG=remote_host=host.docker.internal remote_enable=1
+XDEBUG_CONFIG=remote_host=172.18.0.1 remote_enable=1
 # Создайте Docker сервер "Docker_srv" в настройках Php Storm ( Preferences > Build,Execution,Deployment > Docker )
 # И сервер  PHP ( Preferences > Languages & Frameworks > PHP > Servers  Name (Docker_srv) host (dns имя контейнера) Port (VIRTUAL_PORT Контейнера)
 # Включить использование маппинга (Use mapping - yes) указав абсолютный путь на сервере /var/www/html
